# DiscordBotCpp

./: .gitignore  README.md
DiscordBotCpp/: CMakeLists.txt  CMakeSettings.json  vcpkg.json
DiscordBotCpp/src/: BOT_TOKEN.cpp  BOT_TOKEN.h  config.cpp  helper.cpp  helper.h  main.cpp  test.cpp
